# slog

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: ci.yaml
cmake/vcpkg/: vcpkg.toolchain.cmake
src/: CMakeLists.txt
src/cli/: CMakeLists.txt
src/cli/src/: context.hpp  jsonhandler.hpp  level.hpp  main.cpp
src/cmake/: add_slog_executable.cmake  add_slog_module.cmake  set_slog_target_properties.cmake  slog-config.cmake  slog-install-targets.cmake
src/core/: CMakeLists.txt
src/core/include/slog/: slog.hpp
src/core/include/slog/core/: attrs.hpp  consolehandler.hpp  context.hpp  defaulthandler.hpp  handler.hpp  level.hpp  logger.hpp  record.hpp
src/core/src/: consolehandler.cpp  defaulthandler.cpp  handler.cpp  level.cpp  logger.cpp  slog.cpp
tests/: CMakeLists.txt
tests/cmake/: add_slog_test.cmake
tests/core/: CMakeLists.txt  context_test.cpp  defaulthandler_test.cpp  handler_test.cpp  level_test.cpp  logger_test.cpp  record_test.cpp  slog_test.cpp
